Fixed some white spaces issue for large screens

--- a/src/components/project-item/project-item.styles.scss
+++ b/src/components/project-item/project-item.styles.scss
@@ -1,6 +1,6 @@
 .project-container {
   min-width: 30%;
-  height: 40vh;
+  height: 41vh;
   flex: 1 1 auto;
   display: flex;
   align-items: center;
@@ -8,6 +8,7 @@
   border: 1px solid black;
   margin: 0 7.5px 15px;
   overflow: hidden;
+
 
   &:hover {
     cursor: pointer;
